[package]
name = "ring_bench_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
config = "0.11"
async-trait = "0.1"
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", features = ["enable-tokio-tungstenite"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.10"

[[bin]]
name = "ring_bench_rs"
path = "src/main.rs"